--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,20 +15,37 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:id="@+id/sendLayout">
-        <EditText
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/mediaList"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
             android:layout_weight="0.8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/message"
             android:hint="Message...."/>
-<Button
-    android:layout_weight="0.2"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:id="@+id/send"/>
 
+            <Button
+            android:layout_weight="0.2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Add Media"
+            android:id="@+id/addMedia"/>
+            <Button
+            android:layout_weight="0.2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Send"
+            android:id="@+id/send"/>
     </LinearLayout>
-
+    </LinearLayout>
 </RelativeLayout>
